# Shannon-Prime-ComfyUI

./: .gitattributes  .gitignore  CLAUDE.md  FUTURE-WORK-V5.md  README.md  __init__.py  pyproject.toml
docs/: INTEGRATION.md  NODES.md
nodes/: __init__.py  shannon_prime_audio_nodes.py  shannon_prime_flux_nodes.py  shannon_prime_nodes.py
notebooks/: voxtral_tts_test.ipynb
scripts/: run_workflow.py  sp_ablation.py  sp_lyapunov_analyze.py
workflows/: High-SVI-CAM-FAST-SVII2V-ENHANCED_.json  High-SVI-NSFW-CAM-FAST-SVII2V-L-SP.json  High-SVI-NSFW-CAM-FAST-SVII2V-L-_00015_.json  SP-Qwen3-TTS-Voice-Generation.json  SP-Stable-Audio-Optimized.json  Wan.-.2.2.SVI.Pro.-.Loop.native-SP.json  wan22_t2v_hilow.json  wan22_ti2v_5b_baseline.json  wan22_ti2v_5b_sqfree.json  wan22_ti2v_5b_vht2.json
