[project]
name = "shannon-prime-comfyui"
version = "2.0.0"
description = "Shannon-Prime: accelerate Wan 2.x video generation via block-level attention caching and compute skip"
license = { text = "AGPL-3.0" }
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/nihilistau/shannon-prime-comfyui"

[tool.comfy]
PublisherId = "nihilistau"
DisplayName = "Shannon-Prime Wan Accelerator"
Icon = ""

[tool.comfy.node_classes]
"ShannonPrimeWanCache"          = "Shannon-Prime: Wan Cross-Attn Cache"
"ShannonPrimeWanCacheStats"     = "Shannon-Prime: Cache Stats"
"ShannonPrimeWanCacheSqfree"    = "Shannon-Prime: Wan Cross-Attn Cache (Sqfree)"
"ShannonPrimeWanSelfExtract"    = "Shannon-Prime: Wan Self-Attn Extract (diagnostic)"
"ShannonPrimeWanBlockSkip"      = "Shannon-Prime: Wan Block Skip (Phase 15)"
"ShannonPrimeWanCacheFlush"     = "Shannon-Prime: Cache Flush (before VAE)"
"ShannonPrimeWanSigmaSwitch"    = "Shannon-Prime: Sigma Switch (experimental)"
"ShannonPrimeWanRicciSentinel"  = "Shannon-Prime: Ricci Sentinel (diagnostic)"
